--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts'",
     "build": "tsc && rollup -c scripts/rollup.config.js",
+    "start": "rollup -c scripts/rollup.config.js -w",
     "test": "jest",
     "precommit": "lint-staged"
   },
