--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "homepage": "https://github.com/locationland/terrejs#readme",
   "devDependencies": {
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.4",
-    "prettier": "1.16.4",
-    "rollup": "^1.2.2",
-    "rollup-plugin-typescript2": "^0.19.2",
-    "tslint": "^5.12.1",
+    "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
+    "rollup": "^1.17.0",
+    "rollup-plugin-typescript2": "^0.22.0",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.3.3"
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
